--- a/gameStore/frontend/src/style.css
+++ b/gameStore/frontend/src/style.css
@@ -21,7 +21,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
  
-
 a {
   font-weight: 500;
   color: #646cff;
@@ -33,10 +32,10 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 h1 {
