--- a/gameStore/frontend/src/style.css
+++ b/gameStore/frontend/src/style.css
@@ -23,11 +23,12 @@
  
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: var(--secondary-color);
+  text-decoration: none;
 }
 a:hover {
-  color: #535bf2;
+  color: #66ffff;
+  text-shadow: 0 0 4px var(--secondary-color);
 }
 
 body {
