--- a/gameStore/frontend/src/style.css
+++ b/gameStore/frontend/src/style.css
@@ -39,9 +39,9 @@ body {
   color: var(--text-color);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h1, h2, h3 {
+  text-shadow: 2px 2px #000;
+  color: var(--secondary-color);
 }
 
 button {
